--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <div id="content">
     <header>
-        <a id="logo_link" href="index.html">
+        <div id="logo"
+            <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
+    </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
@@ -21,17 +23,19 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
+    </div>
+    
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+        <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar </h4>
-            <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
-            </div>
-        </section>
+        <h1 class="home-title">Have An Adventure</h1>
+        <h4>Make Memories with Dry Oar</h4>
+        <div class="button-box">
+            <a class="book" href="rates.html">Book Now</a>
+        </div>
+        </section>              
     </div>
     <main class="home-grid">
         <section class="rivers-card">
@@ -49,11 +53,8 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
-        <div id="background">
-         </div>
-         <div id="mountains"> 
-         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
-         </div>
+        <div id="background"></div>
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
@@ -61,21 +62,21 @@
         </section>
     </main>
     <footer>
-        <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+        <p>Dry Oar © 20XX - Your First and Last Name Here</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-                    
             <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
-            </footer>
+        </div>
+    </footer>
         </div>
     </body>  
 </html>
