--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="faq.html"><faq class="html">FAQ</faq></a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
